--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 # Ignore Byebug command history file.
 .byebug_history
 coverage
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
