Update travis config to make tests work
Update ruby to 2.5.1

Update bundle

Change travis machine config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ before_script: bundle exec rails db:create db:migrate
 cache: bundler
 language: ruby
 rvm:
-  - 2.3.0
+  - 2.5.1
 sript:
   - bundle exec rspec
-sudo: false
-dist: xenial
+sudo: required
+dist: precise
 branch:
   only:
     - master
