--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
+  "scripts": {
+    "lint": "eslint app/javascript",
+    "pretty": "prettier --semi false --print-width 100 --single-quote--trailing-comma all --write \"src/**/*.js\""
+  },
   "dependencies": {
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-beautiful-dnd": "^10.1.0",
     "react-digraph": "^4.1.5",
     "react-dom": "^16.5.2",
     "react-graph-vis": "^1.0.2",
     "react_ujs": "^2.4.4"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "2.11.2",
+    "babel-eslint": "^9.0.0",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.14.0"
   }
 }
