--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
@@ -15,7 +16,6 @@
     "react_ujs": "^2.4.4"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2",
     "babel-eslint": "^9.0.0",
     "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
     "lint-staged": "^7.2.0",
-    "prettier": "^1.14.0"
+    "prettier": "^1.14.0",
+    "webpack-dev-server": "2.11.2"
   }
 }
